Implemented the simplest admin functionality that worked.

--- a/app/views/admin/town_story_articles/_sortable_list.html.erb
+++ b/app/views/admin/town_story_articles/_sortable_list.html.erb
@@ -1,5 +1,5 @@
 <ul id='sortable_list'>
-  <%= render :partial => 'town_story', :collection => @town_stories %>
+  <%= render :partial => 'town_story_article', :collection => @items, :as => :item %>
 </ul>
 <%= render :partial => "/shared/admin/sortable_list",
             :locals => {
