--- a/app/views/admin/town_story_articles/_records.html.erb
+++ b/app/views/admin/town_story_articles/_records.html.erb
@@ -1,9 +1,9 @@
 <% if searching? %>
   <h2><%= t('results_for', :scope => 'shared.admin.search', :query => params[:search]) %></h2>
 <% end %>
-<% if @town_stories.any? %>
+<% if @items.exists? %>
   <div class='pagination_container'>
-    <%= render :partial => 'town_stories' %>
+    <%= render :partial => 'town_story_articles' %>
   </div>
 <% else %>
   <p>
