--- a/app/views/town_story_articles/show.html.erb
+++ b/app/views/town_story_articles/show.html.erb
@@ -1,12 +1,12 @@
 <% content_for :body_content_title do %>
-  <%= @town_story.dummy %>
+  <%= @item.title %>
 <% end %>
 
 <% content_for :body_content_left do %>
   <section>
-    <h1>Dummy</h1>
+    <h1>Title</h1>
     <p>
-      <%=raw @town_story.dummy %>
+      <%= @item.title %>
     </p>
   </section>
 <% end %>
@@ -14,10 +14,10 @@
 <% content_for :body_content_right do %>
   <aside>
     <h2><%= t('.other') %></h2>
-    <ul id="town_stories">
-      <% @town_stories.each do |town_story| %>
+    <ul id="town_story_articles">
+      <% @items.each do |item| %>
         <li>
-          <%= link_to town_story.dummy, town_story_path(town_story) %>
+          <%= link_to item.title, town_story_article_path(item) %>
         </li>
       <% end %>
     </ul>
