--- a/app/views/admin/town_story_articles/_form.html.erb
+++ b/app/views/admin/town_story_articles/_form.html.erb
@@ -1,25 +1,53 @@
 <%= form_for [ :admin, @item ] do |f| -%>
-  <%= render :partial => "/shared/admin/error_messages", :locals => {
-          :object => @item,
-          :include_object_name => true
-        } %>
+    <%= render :partial => "/shared/admin/error_messages",
+        :locals => { :object => @item, :include_object_name => true } %>
   
-  <div class='field'>
-    <%= f.label :title -%>
-    <%= f.text_field :title, :class => 'larger widest' -%>
-  </div>
-  
-  <div class='field'>
-    <%= f.label :text -%>
-    <%= f.text_area :text, :class => 'widest' -%>
-  </div>
-  
-  <%= render :partial => "/shared/admin/form_actions",
-              :locals => {
-                :f => f,
-                :continue_editing => false,
-                :delete_url => eval("admin_#{f.object_name}_path(#{f.object.id.to_s.inspect})"),
-                :delete_title => t('delete', :scope => 'admin.town_story_articles.town_story_article'),
-                :delete_confirmation => t('message', :scope => 'shared.admin.delete', :title => @item.title)
-              } %>
+    <div class='field'>
+        <%= f.label :title -%>
+        <%= f.text_field :title, :class => 'larger widest' -%>
+    </div>
+
+    <div class='field'>
+        <%= f.label :text -%>
+        <%= f.text_area :text, :class => 'widest' -%>
+    </div>
+
+    <div class="photos">
+        <%= f.mongo_fields_for :photos do |p| %>
+            <% p.object.each_with_index do |id, i| %>
+                <div class="photoframe">
+                    <%= p.hidden_field i %>
+                    <%= image_tag(PhotoUploader.url(id, :t), :class => 'photo_thumb', alt: '') %>
+                </div>
+            <% end -%>
+        <% end -%>
+        
+        <div id="uploader" class="uploader photoframe">
+            <span class="uploader_text">Drop JPEG Files Here</span>
+        </div>
+    </div>
+
+    <%= render :partial => "/shared/admin/form_actions",
+        :locals => {
+            :f => f,
+            :continue_editing => false,
+            :delete_url => eval("admin_#{f.object_name}_path(#{f.object.id.to_s.inspect})"),
+            :delete_title => t('delete', :scope => 'admin.town_story_articles.town_story_article'),
+            :delete_confirmation => t('message', :scope => 'shared.admin.delete', :title => @item.title)
+    } %>
 <% end -%>
+
+<% content_for :javascripts do %>
+    <%= javascript_include_tag 'plupload/1.5.2/plupload' %>
+    <%= javascript_include_tag 'plupload/1.5.2/plupload.html5.js' %>
+    <%= javascript_include_tag 'admin_town_story_photo_uploader' %>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            init('<%= upload_photo_admin_town_story_articles_path %>', '<%= form_authenticity_token %>');
+        });
+    </script>
+<% end %>
+
+<% content_for :stylesheets do %>
+    <%= stylesheet_link_tag "admin_town_story_photo_uploader" %>
+<% end %>
