Passed all tests.

--- a/app/views/refinery/town_story_articles/admin/town_story_articles/_town_story_article.html.erb
+++ b/app/views/refinery/town_story_articles/admin/town_story_articles/_town_story_article.html.erb
@@ -1,20 +1,20 @@
-<li class='clearfix record <%= cycle("on", "on-hover") %>' id="<%= dom_id(town_story_article) -%>">
+<li class='clearfix record <%= cycle("on", "on-hover") %>' id="<%= dom_id(item) -%>">
   <span class='title'>
-    <%= town_story_article.dummy %>
+    <%= item.title %>
 
   </span>
   <span class='actions'>
     
-    <%= link_to refinery_icon_tag("application_go.png"), refinery.town_story_articles_town_story_article_path(town_story_article),
+    <%= link_to refinery_icon_tag("application_go.png"), refinery.town_story_articles_town_story_article_path(item),
         :title => t('.view_live_html'),
         :target => "_blank" %>
     
-    <%= link_to refinery_icon_tag("application_edit.png"), refinery.edit_town_story_articles_admin_town_story_article_path(town_story_article),
+    <%= link_to refinery_icon_tag("application_edit.png"), refinery.edit_town_story_articles_admin_town_story_article_path(item),
          :title => t('.edit') %>
-    <%= link_to refinery_icon_tag("delete.png"), refinery.town_story_articles_admin_town_story_article_path(town_story_article),
+    <%= link_to refinery_icon_tag("delete.png"), refinery.town_story_articles_admin_town_story_article_path(item),
         :class => "cancel confirm-delete",
         :title => t('.delete'),
-        :confirm => t('message', :scope => 'refinery.admin.delete', :title => town_story_article.dummy),
+        :confirm => t('message', :scope => 'refinery.admin.delete', :title => item.title),
         :method => :delete %>
   </span>
 </li>
