--- a/app/views/refinery/town_story_articles/admin/town_story_articles/_town_story_articles.html.erb
+++ b/app/views/refinery/town_story_articles/admin/town_story_articles/_town_story_articles.html.erb
@@ -1,2 +1,2 @@
-<%= will_paginate @town_story_articles if Refinery::TownStoryArticles::Admin::TownStoryArticlesController.pageable? %>
+<%= will_paginate @items if Refinery::TownStoryArticles::Admin::TownStoryArticlesController.pageable? %>
 <%= render 'sortable_list' %>
