--- a/app/views/refinery/town_story_articles/admin/town_story_articles/_form.html.erb
+++ b/app/views/refinery/town_story_articles/admin/town_story_articles/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for [ :admin, @item ] do |f| -%>
-    <%= render :partial => "/shared/admin/error_messages",
+<%= form_for [ refinery, :town_story_articles, :admin, @item ] do |f| -%>
+    <%= render :partial => "/refinery/admin/error_messages",
         :locals => { :object => @item, :include_object_name => true } %>
   
     <div class='field'>
@@ -32,7 +32,7 @@
         <% end -%>
     </div>
 
-    <%= render :partial => "/shared/admin/form_actions",
+    <%= render :partial => "/refinery/admin/form_actions",
         :locals => {
             :f => f,
             :continue_editing => false,
