--- a/app/views/refinery/town_story_articles/admin/town_story_articles/_records.html.erb
+++ b/app/views/refinery/town_story_articles/admin/town_story_articles/_records.html.erb
@@ -2,7 +2,7 @@
   <h2><%= t('results_for', :scope => 'refinery.admin.search', :query => params[:search]) %></h2>
 <% end %>
 <div class='pagination_container'>
-  <% if @town_story_articles.any? %>
+  <% if @items.any? %>
     <%= render 'town_story_articles' %>
   <% else %>
   <p>
