--- a/app/views/refinery/town_story_articles/admin/town_story_articles/_records.html.erb
+++ b/app/views/refinery/town_story_articles/admin/town_story_articles/_records.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 <div class='pagination_container'>
   <% if @items.any? %>
-    <%= render 'town_story_articles' %>
+    <%= render 'items' %>
   <% else %>
   <p>
     <% unless searching? %>
