Fixed a bug that Locate and Copy buttons doesn't work.

--- a/app/views/refinery/town_story_articles/admin/town_story_articles/_form.html.erb
+++ b/app/views/refinery/town_story_articles/admin/town_story_articles/_form.html.erb
@@ -23,7 +23,7 @@
             <% end -%>
         </div>
         <div id="addressContainer">
-            <%= f.label :address, 'Address' -%> <%= f.text_field :address -%> <a href="#" id="show">Locate this address</a>
+            <%= f.label :address, 'Address' -%> <%= f.text_field :address, { id: 'address' } -%> <a href="#" id="show">Locate this address</a>
         </div>
     </div>
 
